Christoph Plattner      <Christoph.Plattner@dot.at>     31 Jan 2000-02 Feb 2000
David Murn              <scuffer@hups.apana.org.au>     11 Nov 1998-15 Nov 1999
Giles Russell                                           22 Nov 1999
Greg Haerr                                              14 Jul 1999-20 Jul 1999
Harry Kalogirou         <HarKal@rainbow.cs.unipi.gr>    20 Jun 2001-27 Nov 2001
Jacek Lipkowski 	<sq5bpf@acid.ch.pw.edu.pl>	20 Jan 2002
Mario Frasca                                            20 Jan 2000-14 Feb 2000
Paul Nasrat             <pnasrat@uk.now.com>            29 Oct 2001-20 Nov 2001
Per Olofsson            <MagerValp@cling.gu.se>         25 Feb 2000
Peter L Vachuska        <pvachusk@nconnect.net>         13 Aug 2001
Riley Williams          <rhw@MemAlpha.cx>               16 Nov 1998-20 Jan 2002
Roman Festchook         <roma@polesye.net>              27 Oct 2001
Simon Weijgers          <simon@weijgers.com>            16 Sep 1998-15 Nov 1999
Simon Wood                                              06 Jan 2000-12 Jan 2000
Thomas McWilliams       <tgm9999@yahoo.com>             27 Aug 1999-02 Apr 2001

-------------------------------------------------------------------------------

Sun Jan 20 12:15:18 GMT 2002	Riley Williams <rhw@MemAlpha.cx>

	* Version number display actually committed.
	* Formatting clean-ups in Menuconfig script.
	* Two Makefiles were excluded from `make nodep` due to a typo,
	  so fixed it to include them as well.
	* Updated arch/i86/defconfig to reflect reality.
	* Removed autoconf.h from CVS as it's generated by compiler.

Sun Jan 20 01:09:25 EET 2002	Jacek Lipkowski <sq5bpf@acid.ch.pw.edu.pl>

	* Menuconfig non compilable fix.
	* Better version number display for menuconfig.

Fri Jan 18 23:22:10 GMT 2002	Riley Williams <rhw@MemAlpha.cx>

	* Updated TODO list from suggestions received.

Mon Jan 14 16:18:21 GMT 2002	Riley Williams <rhw@MemAlpha.cx>

	* OOPS: Previous commit accidentally omitted a patch - applied.